// syntax = "proto3";

// option csharp_namespace = "FSR.DigitalTwinLayer.GRPC.Lib.Services.Connection";

// package FSR.DigitalTwinLayer.GRPC.Lib;

// message PoseLandmark {
//     float x = 1;
//     float y = 2;
//     float z = 3;
//     float visibility = 4; // Optional visibility value
// }

// message GetPoseLandmarksRequest {}
// message GetPoseLandmarksResponse {
//     repeated PoseLandmark poseLandmarks = 1; // List of pose landmarks
// }

// message WorldPoseLandmark {
//     float x = 1;
//     float y = 2;
//     float z = 3;
//     float visibility = 4; // Optional visibility value
// }

// message GetWorldPoseLandmarksRequest {}
// message GetWorldPoseLandmarksResponse {
//     repeated WorldPoseLandmark worldPoseLandmarks = 1; // List of world pose landmarks
// }

// service PoseStreaming {
//     rpc GetPoseLandmarks(GetPoseLandmarksRequest) returns (GetPoseLandmarksResponse);
//     rpc GetWorldPoseLandmarks(GetWorldPoseLandmarksRequest) returns (GetWorldPoseLandmarksResponse);
// }

syntax = "proto3";

option csharp_namespace = "FSR.DigitalTwin.App.GRPC.Services.Pose";

import "Protos/DTO/PoseMessages.proto";

package FSR.DigitalTwin.App.GRPC;

// Define the streaming service for pose data
service PoseStreamingService {
  rpc StreamPoseData (StreamPoseRequest) returns (stream PoseData);
}

message StreamPoseRequest {
  string client_id = 1;
}